Games Sequelize Update Method

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Postgres-crud",
+  "name": "postgres-crud",
   "version": "1.0.0",
   "description": "",
   "main": "ContextStrategy.js",
