--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "ContextStrategy.js",
   "scripts": {
-    "test": "mocha *.test.js", 
-    "test:watch": "mocha *.test.js -w"
+    "test": "mocha src/examples/*.test.js",
+    "test:watch": "mocha src/examples/*.test.js -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "commander": "^4.0.1",
+    "express": "^4.17.1",
     "pg": "^7.15.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.3"
