--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "ContextStrategy.js",
   "scripts": {
-    "test": "mocha src/examples/*.test.js",
-    "test:watch": "mocha src/examples/*.test.js -w"
+    "test": "mocha src/tests/*.test.js",
+    "test:watch": "mocha src/tests/*.test.js -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "commander": "^4.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^7.15.1",
     "pg-hstore": "^2.3.3",
